#
#  Copyright 2017 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

static_library("types") {
  cflags = [
     "-fvisibility=default",
  ]

  sources = [
    "class_of_device.cc",
    "bluetooth/uuid.cc",
    "raw_address.cc",
  ]

  include_dirs = [
    "//bt/",
  ]

  configs += [
    "//bt:target_defaults",
  ]
}

if (use.test) {
  executable("net_test_types") {
    sources = [
      "test/class_of_device_unittest.cc",
      "test/raw_address_unittest.cc",
      "test/bluetooth/uuid_unittest.cc",
    ]

    include_dirs = [
      "//bt/",
    ]

    libs = [
      "dl",
      "pthread",
      "resolv",
      "rt",
      "z",
    ]

    # For some reason, this is required for host build. Otherwise, I get
    # a complaint from gmock:
    #   undefined reference to symbol 'pthread_getspecific@@GLIBC_2.2.5'
    ldflags = [
      "-lpthread"
    ]

    deps = [
      ":types",
    ]

    configs += [
      "//bt:external_gmock_main",
      "//bt:target_defaults",
    ]
  }
}
