#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

source_set("BluetoothCommonSources") {
  sources = [
    "init_flags.cc",
    "metric_id_manager.cc",
    "stop_watch.cc",
    "strings.cc",
  ]

  configs += [ "//bt/gd:gd_defaults" ]
  deps = [
    "//bt/gd:gd_default_deps",
    "//bt:libbt-platform-protos-lite",
  ]
}
