#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

source_set("BluetoothSecurityChannelSources") {
  sources = [ "channel/security_manager_channel.cc" ]
  configs += [ "//bt/gd:gd_defaults" ]
  deps = [ "//bt/gd:gd_default_deps" ]
}

source_set("BluetoothSecurityPairingSources") {
  sources = [ "pairing/classic_pairing_handler.cc" ]
  configs += [ "//bt/gd:gd_defaults" ]
  deps = [ "//bt/gd:gd_default_deps" ]
}

source_set("BluetoothSecurityRecordSources") {
  sources = [ "record/security_record_storage.cc" ]
  configs += [ "//bt/gd:gd_defaults" ]
  deps = [ "//bt/gd:gd_default_deps" ]
}

source_set("BluetoothSecuritySources") {
  sources = [
    "ecc/multprecision.cc",
    "ecc/p_256_ecc_pp.cc",
    "ecdh_keys.cc",
    "facade_configuration_api.cc",
    "internal/security_manager_impl.cc",
    "l2cap_security_module_interface.cc",
    "pairing_handler_le.cc",
    "pairing_handler_le_legacy.cc",
    "pairing_handler_le_secure_connections.cc",
    "security_manager.cc",
    "security_module.cc",
  ]

  deps = [
    ":BluetoothSecurityChannelSources",
    ":BluetoothSecurityPairingSources",
    ":BluetoothSecurityRecordSources",
    "//bt/gd:gd_default_deps",
  ]

  configs += [ "//bt/gd:gd_defaults" ]
}
