#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

source_set("BluetoothShimSources") {
  sources = [
    "dumpsys.cc",
    "dumpsys_args.cc",
  ]

  deps = [
    "//bt/gd/dumpsys:BluetoothGeneratedDumpsysBundledSchema_h",
    "//bt/gd/dumpsys/bundler:BluetoothGeneratedBundlerSchema_h_bfbs",
  ]

  configs += [
    "//bt/gd:gd_defaults",
    "//bt:external_flatbuffers",
  ]
}
