#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

source_set("BluetoothStorageSources") {
  sources = [
    "adapter_config.cc",
    "classic_device.cc",
    "config_cache.cc",
    "config_cache_helper.cc",
    "device.cc",
    "le_device.cc",
    "legacy_config_file.cc",
    "mutation.cc",
    "mutation_entry.cc",
    "storage_module.cc",
  ]

  configs += [ "//bt/gd:gd_defaults" ]
  deps = [ "//bt/gd:gd_default_deps" ]
}
